--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jlucas1224.github.io/queridometro",
+  "homepage": "https://jlucas1224.github.io/queridometro-da-galera",
   "name": "leraning",
   "version": "0.1.0",
   "private": true,
